Change css relative path

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link href="./public/assets/style/style.css" rel="stylesheet">
+		<link href="./assets/style/style.css" rel="stylesheet">
 		<title>CV Generator</title>
 	</head>
 	<body>
