Adding cv .css file, data treatment

--- a/public/index.html
+++ b/public/index.html
@@ -47,7 +47,7 @@
 					<div class="work">
 						<label>Experience</label><br>
 						<input type="text" class="work-input" placeholder="Company: role (1999-2000)"><br>
-						<textarea id="about" name="about" placeholder="Achievements, activities, things you did..." required></textarea><br>
+						<textarea id="work-desc" name="about" placeholder="Achievements, activities, things you did..." required></textarea><br>
 					</div>
 					<button class="add-button" type="button" onClick="add_work()">+</button>
 				</div>
