Started adding multi languages support

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,10 @@
 		<div class="title-bar">
 			<h1>📜 CV Generator</h1>
 			<a class="new-cv-button" href="./index.html">Generate a new CV</a>
+			<div class="languages">
+				<button type="button" id="br">🇧🇷</button>
+				<button type="button" id="english">🇺🇸</button>
+			</div>
 		</div>
 		<div class="product-info">
 			<h1>📝Create a CV for your own use</h1>
