--- a/public/index.html
+++ b/public/index.html
@@ -11,8 +11,8 @@
 			<h1>📜 CV Generator</h1>
 			<a class="new-cv-button" href="./index.html">Generate a new CV</a>
 			<div class="languages">
-				<button type="button" id="br">🇧🇷</button>
-				<button type="button" id="english">🇺🇸</button>
+				<button type="button" onClick="translate_index_to_portuguese()" id="br">🇧🇷</button>
+				<button type="button" onClick="return_index_to_english()" id="english">🇺🇸</button>
 			</div>
 		</div>
 		<div class="product-info">
@@ -50,9 +50,10 @@
 		</div>
 		<div class="save-user-cv">
 			<h6>SAVE/EDIT YOUR CV</h6>
-			<p>The document will be printed as .pdf file, you shouldn't have problems to modify it.
+			<p>The document will be printed as .pdf file, you shouldn't have problems to modify it.</p>
 		</div>
 		<script src="./app/add_input_options.js"></script>
 		<script src="./app/form_data_treatment.js"></script>
+		<script src="./app/language_support.js"></script>
 	</body>
 </html>
