--- a/public/pages/cv.html
+++ b/public/pages/cv.html
@@ -34,6 +34,10 @@
 			<h3>Work experience</h3>
 			<p id="work"></p>
 		</div>
+		<div class="languages">
+				<button type="button" onClick="translate_cv_to_portuguese()" id="br">🇧🇷</button>
+				<button type="button" onClick="return_page_to_english()" id="english">🇺🇸</button>
+		</div>
 		<script>
 			function generate_website_qr_code(){
 				const qr_code_data = get_cookie_value('user_website');
@@ -52,5 +56,6 @@
 					qr_img_location.src = website_qr_code.toDataURL();
 			}
 		</script>
+		<script src="../app/language_support.js"></script>
 	</body>
 </html>
