Change function name in index.html
Changing the older name of the function to the newer one

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
 			<a class="new-cv-button" href="./index.html">Generate a new CV</a>
 			<div class="languages">
 				<button type="button" onClick="translate_index_to_portuguese()" id="br">🇧🇷</button>
-				<button type="button" onClick="return_index_to_english()" id="english">🇺🇸</button>
+				<button type="button" onClick="return_page_to_english()" id="english">🇺🇸</button>
 			</div>
 		</div>
 		<div class="product-info">
